# gtk-ui

./: .gitignore  AddWindow.cpp  CMakeLists.txt  Callibration.cpp  EditWindow.cpp  Gesture.cpp  GestureItem.cpp  GuiSettings.cpp  GuiSettings.hpp  List.cpp  cmake_install.cmake  config.txt  main.cpp  saved_gestures.txt  ui.cpp
